file(GLOB SOURCE_FILES *.h *.cpp)
find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)
set(SOURCE ${SOURCE_FILES})
add_library(VVRPhysics SHARED ${SOURCE} ${UI_FILES})
include_directories(${OPENGL_INCLUDE_DIRS}  ${GLUT_INCLUDE_DIRS} )
target_link_libraries(VVRPhysics ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} )