### QT STUFF #############################################################################
find_package(Qt5Widgets REQUIRED)
find_package(Qt5OpenGL REQUIRED)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
##########################################################################################

##########################################################################################
file(GLOB SOURCE_FILES *.h *.cpp)
set(SOURCE ${SOURCE_FILES})
##########################################################################################

##########################################################################################
qt5_wrap_ui(UI_FILES window.ui)
##########################################################################################

### Find MathGeoLib ######################################################################
set(MathGeoLib_DIR CACHE PATH "Installation path of MathGeoLib")
include_directories(${MathGeoLib_DIR}/include)
link_directories(${MathGeoLib_DIR}/lib)
##########################################################################################

##########################################################################################
find_package(OpenGL REQUIRED)
include_directories(${OPENGL_INCLUDE_DIR})
##########################################################################################

##########################################################################################
include_directories(${CMAKE_SOURCE_DIR})
include_directories(${CMAKE_SOURCE_DIR}/GeoLib)
##########################################################################################

##########################################################################################
add_library(VVRScene SHARED ${SOURCE} ${UI_FILES})
##########################################################################################

### QT Used modules ######################################################################
qt5_use_modules(VVRScene Widgets OpenGL)
##########################################################################################

### Link to Libraries ####################################################################
target_link_libraries(VVRScene LINK_PRIVATE ${OPENGL_LIBRARIES} Qt5::Widgets Qt5::OpenGL)
target_link_libraries(VVRScene GeoLib)
if (WIN32 OR APPLE)
    target_link_libraries(VVRScene MathGeoLib)
endif (WIN32)
##########################################################################################
